Fixed a small glitch on the FAQ on smaller devices

--- a/frontend/src/sass/common/uclapi.scss
+++ b/frontend/src/sass/common/uclapi.scss
@@ -282,7 +282,7 @@ a:hover { color: #BBBBBB; }
       line-height: 38px;
       text-indent: 0px;
       outline: 0;
-      padding: 10px 0 10px 16px;
+      padding: 10px 0 10px 0;
       cursor: pointer;
       font-weight: 600;
       font-size: 20px;
